<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp"
    android:background="#1f232f">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            android:layout_margin="20dp"
            android:elevation="8dp"
            android:background="@drawable/rounded_corner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_gravity="center"
                />


            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@mipmap/ic_logo_foreground"
                android:layout_gravity="center"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_margin="10dp"
                android:text="@string/signup"
                android:gravity="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>


            <EditText

                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:drawableEnd="@drawable/baseline_mail_outline_24"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:autofillHints="emailAddress"/>
            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:hint="@string/enter_username"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:hint="@string/enter_phone"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:hint="@string/enter_address"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/edt_city"
                android:layout_width="match_parent"
                android:hint="@string/enter_city"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/edt_country"
                android:layout_width="match_parent"
                android:hint="@string/enter_country"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/edt_age"
                android:layout_width="match_parent"
                android:hint="@string/enter_age"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:textSize="22sp"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                android:hint="@string/enter_password"
                android:textColor="@color/black"
                android:inputType="textPassword" />
            <EditText
                android:id="@+id/edt_re_password"
                android:layout_width="match_parent"
                android:hint="@string/reenter_password"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/black"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:drawableEnd="@drawable/baseline_remove_red_eye_24"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp">
                <RadioButton
                    android:id="@+id/btn_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>
                <RadioButton
                    android:id="@+id/btn_female"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
            </RadioGroup>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio2"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp">
                <RadioButton
                    android:id="@+id/btn_admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/admin"/>
                <RadioButton
                    android:id="@+id/btn_user"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/users"/>
            </RadioGroup>
            <Button
                android:layout_gravity="center"
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="20sp"
                android:backgroundTint="#2fb4fc"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txt_forg"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_account"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                />



            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:backgroundTint="#2fb4fc"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>