<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".HomeScreen"
    android:orientation="vertical"
    android:background="#1f232f">



    <TextView
        android:id="@+id/content_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Welcome to the course"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center"
        android:textSize="24sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:elevation="8dp"
        android:background="@drawable/rounded_corner">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/baseline_arrow_back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:layout_gravity="center"
            android:lineSpacingExtra="10dp"
            android:text="@string/course_detail"
            android:textColor="@color/black"
            android:textSize="35dp"
            android:textStyle="bold" /></RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="16dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical">
        <ImageView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/iv_layout"
            android:layout_width="150dp"
            android:layout_height="100dp"/>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />


        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />
        <Button
            android:id="@+id/btn_speak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speak"
            android:backgroundTint="#2fb4fc"
            app:layout_constraintTop_toBottomOf="@+id/tv_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp" />
        <Button
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop"
            app:layout_constraintTop_toBottomOf="@+id/btn_speak"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#2fb4fc"
            android:layout_marginTop="10dp" />
        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_quiz"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/btn_stop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />
        <Button
            android:id="@+id/btn_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz"
            app:layout_constraintTop_toBottomOf="@+id/tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#2fb4fc"
            android:layout_marginTop="10dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>