<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCourse"
    android:orientation="vertical"
    android:background="#1f232f">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="90dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:elevation="8dp"
            android:background="@drawable/rounded_corner">
            <TextView
                android:id="@+id/txt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"
                android:text="@string/add_car"
                android:gravity="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/car_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_add_a_photo_24"
                android:layout_gravity="center"
                app:civ_border_width="2dp"
                app:civ_border_color="#FF000000"/>





            <EditText

                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:hint="@string/enter_title"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>


            <EditText
                android:id="@+id/edt_seats"
                android:layout_width="match_parent"
                android:hint="@string/enter_content"
                android:inputType="text"
                android:layout_height="100dp"
                android:textColorHint="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:textSize="22sp"
                android:textColor="@color/black"/>

    <Button
        android:layout_gravity="center"
        android:id="@+id/btn_add_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_quiz"
        android:textSize="20sp"
        android:backgroundTint="#2fb4fc"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/btm_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_corner"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:menu="@menu/bottom_navigation_menu" />
</LinearLayout>
